methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit:Boolean = false
  def colonne(){
  for (i<-1 to 6){
  if (estSurBiscuit()){
    vuBiscuit:Boolean = true
    avance()
  }
  else{
    avance()
  }
  }
  }
  for (i<-1 to 6){
    recule()
  }
  if (vuBiscuit){
    return true
  }
  else{
    droite()
    avance()
    gauche()
    colonne()
  }
}